# modern-cpp-for-cv

./: .gitignore
lecture0/: main.cpp
lecture0 : compiling/: CMakeLists.txt  README.md
lecture1/: CMakeLists.txt  tools.cpp
lecture1 : .h?/: README.md  main.cpp  tools.hpp
lecture2/: README.md  file_processor  guessingGame.cpp
lecture2 : CORE C++/: file_processor.cpp
lecture3/: README.md
lecture3 : Functions/: CMakeLists.txt  auto_examples.cpp  dangerous_references.cpp  inline_examples.cpp
lecture4/: README.md  utils.cpp  utils.h
lecture4 : STL/algorithms/: fill.cpp  find.cpp  sort.cpp
lecture4 : STL/associative_containers/: maps.cpp
lecture4/containers/: arrays.cpp  vectors.cpp
lecture5 : I-O files/: README.md
lecture5 : I-O files/stream-based-io/basic_ofstream/: readFile.cpp  writeFIle.cpp
lecture5 : I-O files/stream-based-io/globals/: iostreamGLOBALS.cpp
lecture5 : I-O files/utils/: optional.cpp  tuple.cpp
